--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/Versuch_7
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Versuch_6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,6 +77,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Versuch_6=../Versuch_6
+reference.Versuch_6.jar=${project.Versuch_6}/dist/Versuch_6.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
